[gd_scene load_steps=5 format=3 uid="uid://dwxulua8fpqd0"]

[ext_resource type="Script" uid="uid://dyetc0qttcb7y" path="res://World/new_game_btn.gd" id="1_y1dix"]
[ext_resource type="Script" uid="uid://q8o4fd420oji" path="res://World/continue.gd" id="2_jyp4w"]
[ext_resource type="PackedScene" uid="uid://05u30gc3rp15" path="res://UI/mecha_select.tscn" id="2_s76s5"]
[ext_resource type="Script" uid="uid://c10nnuwga4iqw" path="res://World/mecha_container.gd" id="2_w24c8"]

[node name="Start" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Background" type="ColorRect" parent="CanvasLayer/GUI"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="HBoxMargin" type="MarginContainer" parent="CanvasLayer/GUI/Background"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/Background/HBoxMargin"]
layout_mode = 2
alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer"]
custom_minimum_size = Vector2(500, 548)
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Project Mag Title"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
alignment = 1

[node name="New Game" type="Button" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"
script = ExtResource("1_y1dix")

[node name="Continue" type="Button" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"
script = ExtResource("2_jyp4w")

[node name="MechaContainer" type="MarginContainer" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
script = ExtResource("2_w24c8")

[node name="Mechas" type="VBoxContainer" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="CharTitile" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Mechas"
horizontal_alignment = 1

[node name="IconContainer" type="HBoxContainer" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="MechaSelect" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer" instance=ExtResource("2_s76s5")]
layout_mode = 2

[node name="MechaSelect2" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer" instance=ExtResource("2_s76s5")]
layout_mode = 2
mecha_id = 2

[node name="MechaSelect3" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer" instance=ExtResource("2_s76s5")]
layout_mode = 2
mecha_id = 3

[node name="MechaSelect4" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer" instance=ExtResource("2_s76s5")]
layout_mode = 2
mecha_id = 4

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
color = Color(0.366595, 0.366595, 0.366595, 1)

[node name="mecha_name" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect"]
layout_mode = 2
offset_left = 114.0
offset_top = 5.0
offset_right = 369.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 23
text = "name : value"
horizontal_alignment = 1

[node name="current_exp" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 40.0
offset_right = 257.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 23
text = "current_exp : value"

[node name="current_level" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect"]
layout_mode = 2
offset_left = 244.0
offset_top = 40.0
offset_right = 499.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 23
text = "current_level : value"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 95.0
offset_right = 256.0
offset_bottom = 250.0
alignment = 2

[node name="player_max_hp" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "player_max_hp : value"
horizontal_alignment = 1

[node name="player_speed" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "player_speed : value"
horizontal_alignment = 1

[node name="armor" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "armor : value"
horizontal_alignment = 1

[node name="shield" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "shield : value"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect"]
layout_mode = 0
offset_left = 245.0
offset_top = 95.0
offset_right = 500.0
offset_bottom = 250.0
alignment = 2

[node name="crit_rate" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "crit_rate : value"
horizontal_alignment = 1

[node name="crit_damage" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "crit_damage : value"
horizontal_alignment = 1

[node name="grab_radius" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "grab_radius : value"
horizontal_alignment = 1

[node name="player_gold" type="Label" parent="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/ColorRect/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "player_gold : value"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer/VBoxContainer/New Game" to="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer/VBoxContainer/New Game" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer/VBoxContainer/Continue" to="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MenuContainer/VBoxContainer/Continue" method="_on_pressed"]
[connection signal="update_on_select" from="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer/MechaSelect" to="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer" method="_on_mecha_select_update_on_select"]
[connection signal="update_on_select" from="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer/MechaSelect2" to="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer" method="_on_mecha_select_update_on_select"]
[connection signal="update_on_select" from="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer/MechaSelect3" to="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer" method="_on_mecha_select_update_on_select"]
[connection signal="update_on_select" from="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer/Mechas/IconContainer/MechaSelect4" to="CanvasLayer/GUI/Background/HBoxMargin/HBoxContainer/MechaContainer" method="_on_mecha_select_update_on_select"]
